# vector-space-retrieval

./: .clang-format  .gitignore  CMakeLists.txt  Fri May 18 13:41:57 2018.json  README.md  backlog.txt  configure.sh  download_glove.sh  eval_test.sh  install.sh  install_server.sh  main.cc  main.cpp  make.sh  meeting-notes.txt  run.sh  server_install.sh  server_start.sh
data/: .q-nontopictitles.queries.swp  2-1-0.qrel  README.md  collection.docs  collection_test.docs  collection_test_mwe.docs  d-collection.docs  nontopic-titles.queries  q-all.queries.test  q-nontopictitles.queries  q-titles.queries  q-viddesc.nopre.queries  q-viddesc.queries  q-vidtitles.queries  s-3.qrel  s-4.qrel  titles.queries  vid-desc.queries  vid-titles.queries
data/data_test/: collection_test_mwe.docs
data/dev/: d-collection.docs  q-all.queries  q-nontopictitles.queries  q-titles.queries  q-viddesc.queries  q-vidtitles.queries  s-3.qrel  s-4.qrel
data/eval_test/: q-vidtitles.queries
data/test/: d-collection.docs  q-all.queries  q-nontopictitles.queries  q-titles.queries  q-viddesc.queries  q-vidtitles.queries  s-3.qrel  s-4.qrel
data/train/: d-collection.docs  q-nontopictitles.queries  q-titles.queries  q-viddesc.queries  q-vidtitles.queries  s-3.qrel  s-4.qrel
docs/: CMakeLists.txt  Doxyfile  Doxyfile.in
docs/html/: annotated.html  argbase_8hh_source.html  args_8hh.html  args_8hh_source.html  class_args-members.html  class_args.html  class_base_exception-members.html  class_base_exception.html  class_cluster-members.html  class_cluster.html  class_document-members.html  class_document.html  class_document_manager-members.html  class_document_manager.html  class_evaluation-members.html  class_evaluation.html  class_evaluation_1_1_i_r___performance_manager_1_1_rel_score-members.html  class_evaluation_1_1_i_r___performance_manager_1_1_rel_score.html  class_file_exception-members.html  class_file_exception.html  class_index_manager-members.html  class_index_manager.html  class_invalid_arguement_exception-members.html  class_invalid_arguement_exception.html  class_invalid_argument_exception-members.html  class_invalid_argument_exception.html  class_inverted_index-members.html  class_inverted_index.html  class_measure-members.html  class_measure.html  class_out_of_memory_exception-members.html  class_out_of_memory_exception.html  class_posting_list-members.html  class_posting_list.html  class_query_execution_engine-members.html  class_query_execution_engine.html  class_query_manager-members.html  class_query_manager.html  class_query_processing_engine-members.html  class_query_processing_engine.html  (+260 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_12.js  all_13.js  all_2.js  all_3.js  all_4.js  all_5.js  all_8.js  all_9.js  all_a.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_2.js  classes_3.js  classes_6.js  classes_8.js  classes_9.js  classes_b.js  classes_c.js  classes_d.js  classes_e.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  files_6.js  files_7.js  files_8.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  (+12 more)
eval/: Tue May  1 20:36:04 2018.json
evsr-server/client/: package-lock.json  package.json
evsr-server/client/public/: index.html
evsr-server/client/src/: App.js
evsr-server/client/src/components/: Box.js  Navigation.js  Search.js
evsr-server/client/src/styles/: styles.js
evsr-server/server/: README.md  package-lock.json  package.json
evsr-server/server/service/: sockets.js
evsr-server/server/util/: Logger.js  Shell.js
evsr-web/: README.md  jsdocConf.json  package-lock.json  package.json
evsr-web/client/: README.md  package-lock.json  package.json
evsr-web/client/src/: App.js  index.js  socket.js
evsr-web/client/src/components/: Box.js  Evaluation.js  Navigation.js  Search.js
evsr-web/client/src/styles/: styles.js  theme.js
evsr-web/docs/client/: index.html
evsr-web/docs/server/: index.html  module-ForeignCode-Java.html  module-ForeignCode-Shell.html  module-ForeignCode.html  module-Logger.html  module-Sockets.html  service_sockets.js.html  util_Logger.js.html  util_Shell.js.html
evsr-web/presentation/: .eslintrc  index.html  package-lock.json  package.json
evsr-web/presentation/assets/: custom.css  index_manager_init.example
evsr-web/presentation/presentation/: index.js
evsr-web/server/: aggregate_eval.js  calc_percentages.js  package-lock.json  package.json  server.js
evsr-web/server/data/: graph.json
evsr-web/server/eval/aggregated-per-mode/: Dim2500.json-aggregated.json
evsr-web/server/service/: sockets.js
evsr-web/server/util/: Logger.js  Shell.js
preprocessing/: preprocess.py
python/: README.md
python/preprocessing/: Pipfile  preprocess.py
python/wiki-crawler/: Pipfile  wikipedia_crawls.docs
python/wikipedia/: main.py  test.py
src/: CMakeLists.txt  argbase.hh  args.cc  args.hh  cluster.cc  cluster.hh  document.cc  document.hh  document_collection.cc  document_collection.hh  document_manager.cc  document_manager.hh  evaluation.cc  evaluation.hh  exception.cc  exception.hh  file_util.cc  file_util.hh  gnuplot-iostream.hh  index_manager.cc  index_manager.hh  inverted_index.cc  inverted_index.hh  ir_util.cc  ir_util.hh  main.cc  measure.hh  posting.cc  posting.hh  posting_list.cc  posting_list.hh  query_execution_engine.cc  query_execution_engine.hh  query_manager.cc  query_manager.hh  query_processing_engine.cc  query_processing_engine.hh  random_projection.cc  random_projection.hh  similarity_measures.cc  (+15 more)
src/infra/: random_projection.cc  random_projection.cpp  random_projection.h  similarity_measures.cc  similarity_measures.hh  types.hh  utils.cc  utils.hh
src/main/: main.cc
src/util/: utils.cc  utils.hh
test_data/: q-nontopictitles.queries  q-titles.queries  q-viddesc.queries  q-vidtitles.queries
tests/: CMakeLists.txt
tests/unit_tests/: CMakeLists.txt  test_document.cpp  test_ir_utils.cpp  test_random_projection.cpp  test_similarity_measures.cpp  test_string_utils.cpp  test_utils.cpp
(+11 files in other folders)
